# Helios-Hermes

./: .gitignore  .travis.yml  .~lock.README.md#  CMakeLists.txt  EpsilonHermesSetup.sh  HeliosHermes.cpp  HeliosHermes.h  HeliosHermesSetup.sh  HermesInstallDependencies.sh  README.adoc  README.md  SchulichDeltaHermes.pro  common.pri  conanfile.txt  config.ini.example  main.cpp  make-all.sh  rpi_build  testconfig.ini  uiresources.qrc
.github/workflows/: c-cpp.yml
ArchitectureDiagrams/: ClassDiagram.xml  DataFlow.xml
BusinessLayer/: .fuse_hidden0000005200000001  BusinessContainer.cpp  BusinessContainer.h  BusinessLayer.pro  JsonDefines.h
BusinessLayer/CommunicationsMonitoringService/: CommunicationsMonitoringService.cpp  CommunicationsMonitoringService.h  I_CommunicationsMonitoringService.h
BusinessLayer/JsonConverter/: I_JsonForwarder.h  JsonForwarder.cpp  JsonForwarder.h
BusinessLayer/JsonForwarder/: .fuse_hidden0000005100000002  I_JsonForwarder.h  JsonDefines.h  JsonForwarder.cpp  (+1 more)
CommunicationLayer/: CommunicationContainer.cpp  CommunicationContainer.h  CommunicationLayer.pro
Config/: ConfigManager.cpp  ConfigManager.h  JsonDefinitions.h  PacketDefinitions.h
DataLayer/: DataContainer.cpp  DataContainer.h  DataLayer.pro  SerialDefines.h
GPIOReader/: GPIOReader.cpp  GPIOReader.h
InfrastructureLayer/: I_Settings.h  InfrastructureContainer.cpp  InfrastructureContainer.h  InfrastructureLayer.pro  Settings.cpp  Settings.h
MessageAggregator/: MessageAggregator.cpp  MessageAggregator.h
MessageTransmitter/: MessageTransmitter.cpp  MessageTransmitter.h
PacketFactory/: Packet.cpp  PacketFactory.cpp  PacketFactory.h
SchulichDeltaHermes/: SchulichDeltaHermes.cpp  SchulichDeltaHermes.h  SchulichDeltaHermes.pro  main.cpp
SchulichEpsilonHermes/: SchulichEpsilonHermes.cpp  SchulichEpsilonHermes.h  SchulichEpsilonHermes.pro  main.cpp
SerialReciever/: SerialReciever.cpp  SerialReciever.h
StreamProcessor/: StreamProcessor.cpp  StreamProcessor.h
Tests/: Tests.pro  testconfig.ini  testmain.cpp
src/: SchulichEpsilonHermes.pro  SchulichHeliosHermes.pro  common.pri  config.ini.example
(+429 files in other folders)
